Added bs5-lightbox by Travis Aaron Wagner to stepstone island page

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -71,7 +71,9 @@
                         </div> -->
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" class="img-fluid mx-auto d-block rounded" alt="iphone5s_gold_portrait.jpeg" width="500"/>
+                        <a href="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/iphone5s_gold_portrait.jpeg" class="img-fluid mx-auto d-block rounded" alt="iphone5s_gold_portrait.jpeg" width="500"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -126,25 +128,39 @@
             <div class="container my-3 py-3 border-bottom">
                 <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
+                        <a href="../images/projects/stepstoneisland/gallery_01.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_01.png" class="img-fluid rounded" alt="gallery_01.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_02.png"class="img-fluid rounded"  alt="gallery_02.png">
+                        <a href="../images/projects/stepstoneisland/gallery_02.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_02.png" class="img-fluid rounded" alt="gallery_02.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_03.png"class="img-fluid rounded"  alt="gallery_03.png">
+                        <a href="../images/projects/stepstoneisland/gallery_03.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_03.png" class="img-fluid rounded" alt="gallery_03.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_04.png"class="img-fluid rounded"  alt="gallery_04.png">
+                        <a href="../images/projects/stepstoneisland/gallery_04.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_04.png" class="img-fluid rounded" alt="gallery_04.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_05.png"class="img-fluid rounded"  alt="gallery_05.png">
+                        <a href="../images/projects/stepstoneisland/gallery_05.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_05.png" class="img-fluid rounded" alt="gallery_05.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_06.png"class="img-fluid rounded"  alt="gallery_06.png">
+                        <a href="../images/projects/stepstoneisland/gallery_06.png" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_06.png" class="img-fluid rounded" alt="gallery_06.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gallery_07.gif"class="img-fluid rounded"  alt="gallery_07.png">
+                        <a href="../images/projects/stepstoneisland/gallery_07.gif" data-toggle="lightbox" data-gallery="main-gallery">
+                            <img src="../images/projects/stepstoneisland/gallery_07.gif" class="img-fluid rounded" alt="gallery_07.gif">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -177,9 +193,9 @@
                             Visual Studio, SourceTree, and GitHub.
                         </p>
                     </div>
-                    <!-- <div class="col">
+                    <div class="col">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/NC8JAmMvvS0?si=gwkNYaK_WyzbtuGF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                 </div>
             </div>
 
@@ -214,7 +230,9 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
+                        <a href="../images/projects/stepstoneisland/ideation_01.png" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -245,13 +263,19 @@
                 </div>
                 <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
+                        <a href="../images/projects/stepstoneisland/gdd_prototype_01.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_prototype_02.png"class="img-fluid rounded"  alt="gdd_prototype_02.png">
+                        <a href="../images/projects/stepstoneisland/gdd_prototype_02.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_prototype_02.png" class="img-fluid rounded" alt="gdd_prototype_02.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_prototype_03.jpeg"class="img-fluid rounded"  alt="gdd_prototype_03.jpeg">
+                        <a href="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" class="img-fluid rounded" alt="gdd_prototype_03.jpeg">
+                        </a>
                     </div>  
                 </div>
                 <div class="row row-cols-1 py-3 row-cols-lg-2">
@@ -275,7 +299,9 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_gameloop_04.png" class="img-fluid rounded" alt="gdd_gameloop_04.png">
+                        <a href="../images/projects/stepstoneisland/gdd_gameloop_04.png" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/gdd_gameloop_04.png" class="img-fluid rounded" alt="gdd_gameloop_04.png"/>
+                        </a>
                     </div>
                 </div>
                 <div class="row row-cols-1 g-2 g-lg-3 py-3">
@@ -296,10 +322,14 @@
                 </div>
                 <div class="row row-cols-2 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_character_design_01.png" class="img-fluid rounded" alt="gdd_character_design_01.png">
+                        <a href="../images/projects/stepstoneisland/gdd_character_design_01.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_character_design_01.png" class="img-fluid rounded" alt="gdd_character_design_01.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_character_design_02.png"class="img-fluid rounded"  alt="gdd_character_design_02.png">
+                        <a href="../images/projects/stepstoneisland/gdd_character_design_02.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_character_design_02.png" class="img-fluid rounded" alt="gdd_character_design_02.png">
+                        </a>
                     </div>
                 </div>
                 <div class="row py-3">
@@ -313,13 +343,19 @@
                 </div>
                 <div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-3 py-3">
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_concept_art_01.png" class="img-fluid rounded" alt="gdd_concept_art_01.png">
+                        <a href="../images/projects/stepstoneisland/gdd_concept_art_01.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_concept_art_01.png" class="img-fluid rounded" alt="gdd_concept_art_01.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_concept_art_02.png"class="img-fluid rounded"  alt="gdd_concept_art_02.png">
+                        <a href="../images/projects/stepstoneisland/gdd_concept_art_02.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_concept_art_02.png" class="img-fluid rounded" alt="gdd_concept_art_02.png">
+                        </a>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_concept_art_03.png"class="img-fluid rounded"  alt="gdd_concept_art_03.png">
+                        <a href="../images/projects/stepstoneisland/gdd_concept_art_03.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
+                            <img src="../images/projects/stepstoneisland/gdd_concept_art_03.png" class="img-fluid rounded" alt="gdd_concept_art_03.png">
+                        </a>
                     </div>
                 </div>
                 <div class="row py-3">
@@ -357,13 +393,17 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_playtesting_01.png" class="img-fluid rounded" alt="gdd_playtesting_01.png">
+                        <a href="../images/projects/stepstoneisland/gdd_playtesting_01.png" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/gdd_playtesting_01.png" class="img-fluid rounded" alt="gdd_playtesting_01.png"/>
+                        </a>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3 py-3">
                     <h3>Work In Progress Pictures</h3>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/gdd_wip_01.png" class="img-fluid rounded" alt="gdd_wip_01.png">
+                        <a href="../images/projects/stepstoneisland/gdd_wip_01.png" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/gdd_wip_01.png" class="img-fluid rounded" alt="gdd_wip_01.png"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -388,7 +428,9 @@
                         </p>
                     </div>
                     <div class="col">
-                        <img src="../images/projects/stepstoneisland/presentation_01.jpeg" class="img-fluid mx-auto d-block rounded" alt="presentation_01.jpeg"/>
+                        <a href="../images/projects/stepstoneisland/presentation_01.jpeg" data-toggle="lightbox">
+                            <img src="../images/projects/stepstoneisland/presentation_01.jpeg" class="img-fluid mx-auto d-block rounded" alt="presentation_01.jpeg"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -404,10 +446,14 @@
       </footer>
     </div>
 
+    <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <!-- bs5-lightbox -->
+     <!-- By  Travis Aaron Wagner: https://trvswgnr.github.io/bs5-lightbox/ -->
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.5/dist/index.bundle.min.js"></script>
   </body>
 </html>
