Added img captions to stepstone island page

--- a/projects/stepstoneisland.html
+++ b/projects/stepstoneisland.html
@@ -233,6 +233,7 @@
                         <a href="../images/projects/stepstoneisland/ideation_01.png" data-toggle="lightbox">
                             <img src="../images/projects/stepstoneisland/ideation_01.png" class="img-fluid mx-auto d-block rounded" alt="ideation_01" width="350"/>
                         </a>
+                            <figcaption class="figure-caption text-center py-3">Using data pulled from the Apple Health App for virtual currency.</figcaption>
                     </div>
                 </div>
             </div>
@@ -266,16 +267,19 @@
                         <a href="../images/projects/stepstoneisland/gdd_prototype_01.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_prototype_01.png" class="img-fluid rounded" alt="gdd_prototype_01.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from Feb. 2017. In this version, events would be triggered depending on the data you pull from a FitBit wristband.</figcaption>
                     </div>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_prototype_02.png" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_prototype_02.png" class="img-fluid rounded" alt="gdd_prototype_02.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">This is a screenshot of a prototype from April. 2017. In this version, Players would have to tap on the cows to make them active and then they would collide with trees to make sticks, another virtual resource.</figcaption>
                     </div>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" data-toggle="lightbox" data-gallery="gdd-early-prototype-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_prototype_03.jpeg" class="img-fluid rounded" alt="gdd_prototype_03.jpeg">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">This was a paper prototype of Stepstone Island from Fall 2017. This was super useful for brainstorming with the team.</figcaption>
                     </div>  
                 </div>
                 <div class="row row-cols-1 py-3 row-cols-lg-2">
@@ -325,11 +329,13 @@
                         <a href="../images/projects/stepstoneisland/gdd_character_design_01.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_character_design_01.png" class="img-fluid rounded" alt="gdd_character_design_01.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Early concepts of the characters (by Steven Sugar).</figcaption>
                     </div>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_character_design_02.png" data-toggle="lightbox" data-gallery="gdd-character-design-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_character_design_02.png" class="img-fluid rounded" alt="gdd_character_design_02.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Olly's final design (by Steven Sugar).</figcaption>
                     </div>
                 </div>
                 <div class="row py-3">
@@ -346,16 +352,19 @@
                         <a href="../images/projects/stepstoneisland/gdd_concept_art_01.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_concept_art_01.png" class="img-fluid rounded" alt="gdd_concept_art_01.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Early concepts of the island (by Steven Sugar).</figcaption>
                     </div>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_concept_art_02.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_concept_art_02.png" class="img-fluid rounded" alt="gdd_concept_art_02.png">
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Stepstone Island has an invisible tile map made up of hexagonal tiles, which allows us to track which items are placed where. We decided to use hexagons instead of squares to make the island less rigid and more organic (by Steven Sugar).</figcaption>
                     </div>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_concept_art_03.png" data-toggle="lightbox" data-gallery="gdd-concept-art-gallery">
                             <img src="../images/projects/stepstoneisland/gdd_concept_art_03.png" class="img-fluid rounded" alt="gdd_concept_art_03.png">
                         </a>
+                       <figcaption class="figure-caption text-center py-3">For each asset, Steven requested I first draw a quick sketch of the item so that he had a reference of what to create. In addition, each item was classified as small, medium, or large depending on the number of tiles they took up on the tile map.</figcaption>
                     </div>
                 </div>
                 <div class="row py-3">
@@ -396,10 +405,14 @@
                         <a href="../images/projects/stepstoneisland/gdd_playtesting_01.png" data-toggle="lightbox">
                             <img src="../images/projects/stepstoneisland/gdd_playtesting_01.png" class="img-fluid rounded" alt="gdd_playtesting_01.png"/>
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Playtest answers to "If you could sum up your experience in three words, what would those three words be?" from the post-playtest survey.</figcaption>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-lg-1 g-2 g-lg-3 py-3">
                     <h3>Work In Progress Pictures</h3>
+                        <p>
+                            I took a screenshot every week over the course of development to show progress over time. All work in progress pictures can be found in this google slideshow (TBD).
+                        </p>
                     <div class="col">
                         <a href="../images/projects/stepstoneisland/gdd_wip_01.png" data-toggle="lightbox">
                             <img src="../images/projects/stepstoneisland/gdd_wip_01.png" class="img-fluid rounded" alt="gdd_wip_01.png"/>
@@ -431,6 +444,7 @@
                         <a href="../images/projects/stepstoneisland/presentation_01.jpeg" data-toggle="lightbox">
                             <img src="../images/projects/stepstoneisland/presentation_01.jpeg" class="img-fluid mx-auto d-block rounded" alt="presentation_01.jpeg"/>
                         </a>
+                        <figcaption class="figure-caption text-center py-3">Michelle and I showing off Stepstone Island at the IndieCade Showcase @ E3 in June 2018.</figcaption>
                     </div>
                 </div>
             </div>
