--- a/about.html
+++ b/about.html
@@ -45,12 +45,10 @@
       <!-- Body -->
       <div class="container my-5">
         <main>
-            <div class="row pb-3">
-                <h1 class="display-1">Hello there!</h1>
-                <h1 class="lead fw-medium">I'm Katie Pustolski, a game developer in Los Angeles, CA</h1>
-            </div>
             <div class="row">
                 <div class="col-md-6 pb-3">
+                    <h1 class="display-1">Hello there!</h1>
+                    <h1 class="lead fw-medium pb-3">I'm Katie Pustolski, a game developer in Los Angeles, CA</h1>
                     <div class="pb-2">
                         <p>
                             My name is Katie and I am currently a software engineer in the
